2005-08-25  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/html_formatter.rb (make_link): display page names
	instead of page titles if @conf.use_wikiname is false.

2005-08-25  Kouhei Yanagita <yanagi@shakenbu.org>
	* misc/hikifarm/hiki.conf, misc/hikifarm/hikifarm.conf,
	misc/hikifarm/index.cgi: Hikifarm becomes to be able to set up
	a CGI file for file attachment (by Kouhei Sutou).

	* misc/plugin/attach.rb: moved from misc/plugin/attach/attach.rb to
	be able to select a attach.rb plugin without file copy.

2005-08-24  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/xmlrpc.rb (wiki.getPage, wiki.getAllPages): encode strings
	with base64.

	* misc/hiki-mode/hiki-mode.el (hiki-edit-save-page): escape page
	name (reported by YAA).

	* hiki/db/flatfile.rb: update a timestamp of a text file in minor
	changes to making cvs commit properly.

2005-08-04  Kazuhiko  <kazuhiko@fdiary.net>
	* Hiki 0.8.3 released!

2005-08-03  Kazuhiko  <kazuhiko@fdiary.net>
	* plugin/00default.rb (create_menu): [SECURITY FIX] escape a page
	name in a login menu (reported by Yutaka OIWA).
	* hiki/config.rb (save_config): make contents of a conf file
	before trying to write (reported by Yutaka OIWA).

	* hiki/command.rb (cmd_create): [SECURITY FIX] escape a page name.

	* hiki/command.rb (cmd_login): returns 'FORBIDDEN' if login fails.
	(generate_page): accept 'status' as a second argument.

	* hiki/repos/cvs.rb (revisions): revise for the current cvs.

2005-08-03  Kouhei Yanagita <sugi@dream.big.or.jp>
	* hiki/config.rb (base_url): detecting https implemented wrongly.
	* misc/hiki-mode/hiki-mode.el (hiki-fetch-index): fixed: Emacs
	hangs up when fetching the index.
	* misc/hiki-mode/hiki-mode.el (hiki-http-request): The URL
	contains no query when method is POST.


2005-08-03  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/config.rb (base_url): revise for IIS (closes #17).

2005-08-02  Kouhei Yanagita <sugi@dream.big.or.jp>
	* messages/de.rb, misc/plugin/de/*, misc/text/default.de/*,