@@ -1,10 +1,10 @@
-# $Id: config.rb,v 1.82 2005-08-24 06:43:04 fdiary Exp $
+# $Id: config.rb,v 1.83 2005-08-26 02:01:14 fdiary Exp $
 # Copyright (C) 2004-2005 Kazuhiko <kazuhiko@fdiary.net>
 #
 # TADA Tadashi <sho@spc.gr.jp> holds the copyright of Config class.
 
 HIKI_VERSION  = '0.8.3'
-HIKI_RELEASE_DATE = '2005-08-24'
+HIKI_RELEASE_DATE = '2005-08-26'
 
 require 'cgi'
 require 'hiki/command'
